--- a/module5/index.html
+++ b/module5/index.html
@@ -81,20 +81,23 @@
 
     <script>
 
-    // begin function
-    function rev_str(){
+        // begin function
+        function rev_str() {
 
-        var x=document.getElementById("word").value;
+            var x = document.getElementById("word").value;
 
-      var y=  x.split("").reverse().join("");
-    document.getElementById("result").innerText=y;
+            var y = x.split("").reverse().join("");
+            document.getElementById("result").innerText = y;
 
-    }
-    // end function
+        }
+        // end function
 
-    // function call
+        // function call
         document.getElementById("btn").addEventListener("click", rev_str);
     </script>
+        
+    <h2>Preview Available 
+    <a href="https://raw.githack.com/GitableGabe/CUNY_DATA_608/master/module5/index.html">Here</a> </h2>
 
     <h3>Intermediate:</h3>
 
