--- a/module5/index.html
+++ b/module5/index.html
@@ -127,11 +127,11 @@
 
     function calc(z) {
         var n =
-            "<table><tr><td>" + 1 * n + "</td><td>" + 2 * n + "</td><td>" + 3 * n + "</td><td>" + 4 * n +
-            "</td></tr><tr><td>" + 5 * n + "</td><td>" + 6 * n + "</td><td>" + 7 * n + "</td><td>" + 8 * n +
-            "</td></tr><tr><td>" + 9 * n + "</td><td>" + 10 * n + "</td><td>" + 11 * n + "</td><td>" + 12 * n +
-            "</td></tr><tr><td>" + 13 * n + "</td><td>" + 14 * n + "</td><td>" + 15 * n + "</td><td>" + 16 * n +
-            "</td></tr><tr><td>" + 17 * n + "</td><td>" + 18 * n + "</td><td>" + 19 * n + "</td><td>" + 20 * n +
+            "<table><tr><td>" + 1 * z + "</td><td>" + 2 * z + "</td><td>" + 3 * z + "</td><td>" + 4 * z +
+            "</td></tr><tr><td>" + 5 * z + "</td><td>" + 6 * z + "</td><td>" + 7 * z + "</td><td>" + 8 * z +
+            "</td></tr><tr><td>" + 9 * z + "</td><td>" + 10 * z + "</td><td>" + 11 * z + "</td><td>" + 12 * z +
+            "</td></tr><tr><td>" + 13 * z + "</td><td>" + 14 * z + "</td><td>" + 15 * z + "</td><td>" + 16 * z +
+            "</td></tr><tr><td>" + 17 * z + "</td><td>" + 18 * z + "</td><td>" + 19 * z + "</td><td>" + 20 * z +
             "</td></tr></table>"
         return (n)
     }
